# ffnightman

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: dev.yml  release.yml
inc/: extractor.h  help.h
inc/cli/: options.h
inc/log/: interface.h  log.h
packaging/deb/: build_debian_12.sh  build_ubuntu_24.04.sh  deb.cmake
packaging/win/: build.sh  build_mingw_u24.04.sh
src/: extractor.cpp  help.cpp  log.cpp  main.cpp
src/cli/: options.cpp
src/log/: log.cpp
tools/: ff_test.sh
